install madeline proto, docker refactoring

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,47 +8,47 @@ services:
     ports:
       - 80:80
     volumes:
-      - ../src:/var/www/html
+      - ../project/src:/var/www/html
     depends_on:
-      - mysql
+      # - mysql
       - php
-  mysql:
-    image: mariadb:10.5
-    ports:
-      - 3306:3306
-    environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-      MYSQL_ROOT_PASSWORD: secret
-    volumes:
-      - ./mysql:/var/lib/mysql
+  # mysql:
+  #   image: mariadb:10.5
+  #   ports:
+  #     - 3306:3306
+  #   environment:
+  #     MYSQL_DATABASE: laravel
+  #     MYSQL_USER: laravel
+  #     MYSQL_PASSWORD: secret
+  #     MYSQL_ROOT_PASSWORD: secret
+  #   volumes:
+  #     - ./mysql:/var/lib/mysql
   php:
     build:
       context: .
       dockerfile: php.dockerfile
     volumes:
-      - ../src:/var/www/html
+      - ../project/src:/var/www/html
   composer:
     build:
       context: .
       dockerfile: composer.dockerfile
     volumes:
-      - ../src:/var/www/html
+      - ../project/src:/var/www/html
     working_dir: /var/www/html
-  npm:
-    image: node:current-alpine
-    volumes:
-      - ../src:/var/www/html
-    entrypoint: ["npm"]
-    working_dir: /var/www/html
-  artisan:
-    build:
-      context: .
-      dockerfile: php.dockerfile
-    volumes:
-      - ../src:/var/www/html
-    working_dir: /var/www/html
-    depends_on:
-      - mysql
-    entrypoint: ["php", "/var/www/html/artisan"]
+  # npm:
+  #   image: node:current-alpine
+  #   volumes:
+  #     - ../src:/var/www/html
+  #   entrypoint: ["npm"]
+  #   working_dir: /var/www/html
+  # artisan:
+  #   build:
+  #     context: .
+  #     dockerfile: php.dockerfile
+  #   volumes:
+  #     - ../src:/var/www/html
+  #   working_dir: /var/www/html
+  #   depends_on:
+  #     - mysql
+  #   entrypoint: ["php", "/var/www/html/artisan"]
